--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
-    "username": "trip",
-    "password": "triproot",
+    "username": "jaeho614",
+    "password": "eduroot614!@",
     "database": "trip",
-    "host": "192.168.10.104",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "trip",
-    "password": "triproot",
+    "username": "jaeho614",
+    "password": "eduroot614!@",
     "database": "trip",
-    "host": "192.168.10.104",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "trip",
-    "password": "triproot",
+    "username": "jaeho614",
+    "password": "eduroot614!@",
     "database": "trip",
-    "host": "192.168.10.104",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
